--- a/Schematics/OHDSP-ADAU1452.cmp
+++ b/Schematics/OHDSP-ADAU1452.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 04/03/2015 21:51:31
+Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 10/03/2015 12:59:40
 
 BeginCmp
 TimeStamp = /54BE4270/54E2687A;
@@ -974,10 +974,10 @@ IdModule  = OHDSP-Footprints-Pretty:CONN_DIL_2X5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54E8D6A6/54E3A1DF;
+TimeStamp = /54E8D6A6/54FF1EBC;
 Reference = P605;
-ValeurCmp = CONN_3x1;
-IdModule  = OHDSP-Footprints-Pretty:CONN_SIL_3;
+ValeurCmp = CONN_02X05;
+IdModule  = OHDSP-Footprints-Pretty:CONN_DIL_2X5;
 EndCmp
 
 BeginCmp
@@ -1016,10 +1016,17 @@ IdModule  = OHDSP-Footprints-Pretty:CONN_DIL_2X5;
 EndCmp
 
 BeginCmp
-TimeStamp = /54E8D6A6/54E37621;
+TimeStamp = /54E8D6A6/54FF9FE2;
 Reference = P611;
-ValeurCmp = CONN_5x1;
-IdModule  = OHDSP-Footprints-Pretty:CONN_SIL_5;
+ValeurCmp = CONN_02X05;
+IdModule  = OHDSP-Footprints-Pretty:CONN_DIL_2X5;
+EndCmp
+
+BeginCmp
+TimeStamp = /54E8D6A6/55002D08;
+Reference = P612;
+ValeurCmp = CONN_02X05;
+IdModule  = OHDSP-Footprints-Pretty:CONN_DIL_2X5;
 EndCmp
 
 BeginCmp
@@ -1767,13 +1774,6 @@ EndCmp
 BeginCmp
 TimeStamp = /54E8D6A6/54DCCB45;
 Reference = R644;
-ValeurCmp = 0R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /54E8D6A6/54DCD054;
-Reference = R645;
 ValeurCmp = 0R;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
