--- a/Schematics/OHDSP-ADAU1452.cmp
+++ b/Schematics/OHDSP-ADAU1452.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 10/03/2015 16:10:16
+Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 11/03/2015 11:53:17
 
 BeginCmp
 TimeStamp = /54BE4270/54E2687A;
@@ -627,6 +627,20 @@ BeginCmp
 TimeStamp = /54E30917/54E31704;
 Reference = C507;
 ValeurCmp = 10n;
+IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54E30917/5500568E;
+Reference = C508;
+ValeurCmp = 22u;
+IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54E30917/550056ED;
+Reference = C509;
+ValeurCmp = 22u;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
@@ -1488,6 +1502,13 @@ BeginCmp
 TimeStamp = /54E30917/54E313A7;
 Reference = R503;
 ValeurCmp = 0R;
+IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
+EndCmp
+
+BeginCmp
+TimeStamp = /54E30917/55004FB3;
+Reference = R504;
+ValeurCmp = 22R;
 IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
