--- a/Schematics/OHDSP-ADAU1452.cmp
+++ b/Schematics/OHDSP-ADAU1452.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 12/03/2015 12:56:38
+Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 12/03/2015 15:25:05
 
 BeginCmp
 TimeStamp = /54BE4270/54E2687A;
@@ -676,7 +676,7 @@ BeginCmp
 TimeStamp = /55019779/550217DA;
 Reference = C701;
 ValeurCmp = 220u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D12.5mmP5mm;
+IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D8mmP3.5mm;
 EndCmp
 
 BeginCmp
@@ -690,7 +690,7 @@ BeginCmp
 TimeStamp = /55019779/55022B71;
 Reference = C703;
 ValeurCmp = 220u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D12.5mmP5mm;
+IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D8mmP3.5mm;
 EndCmp
 
 BeginCmp
@@ -704,7 +704,7 @@ BeginCmp
 TimeStamp = /55019779/55022725;
 Reference = C705;
 ValeurCmp = 220u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D12.5mmP5mm;
+IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D8mmP3.5mm;
 EndCmp
 
 BeginCmp
@@ -788,14 +788,14 @@ BeginCmp
 TimeStamp = /55019779/5501E8B7;
 Reference = C717;
 ValeurCmp = 1n;
-IdModule  = OHDSP-Footprints-Pretty:CAP_TH_5mm;
+IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
 TimeStamp = /55019779/5501EA1D;
 Reference = C718;
 ValeurCmp = 1n;
-IdModule  = OHDSP-Footprints-Pretty:CAP_TH_5mm;
+IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
@@ -862,27 +862,6 @@ IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
-TimeStamp = /55019779/5501D61E;
-Reference = C728;
-ValeurCmp = 220u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /55019779/5502751E;
-Reference = C729;
-ValeurCmp = 220u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
-EndCmp
-
-BeginCmp
-TimeStamp = /55019779/550276CF;
-Reference = C730;
-ValeurCmp = 220u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
-EndCmp
-
-BeginCmp
 TimeStamp = /55019779/550257E6;
 Reference = C731;
 ValeurCmp = 100u;
@@ -921,14 +900,14 @@ BeginCmp
 TimeStamp = /55019779/5502A051;
 Reference = C736;
 ValeurCmp = 100u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D10mmP5mm;
+IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
 EndCmp
 
 BeginCmp
 TimeStamp = /55019779/55028851;
 Reference = C737;
 ValeurCmp = 100u;
-IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D10mmP5mm;
+IdModule  = OHDSP-Footprints-Pretty:CAP-TH-D6.3mmP2.5mm;
 EndCmp
 
 BeginCmp
@@ -2402,13 +2381,6 @@ IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
 EndCmp
 
 BeginCmp
-TimeStamp = /55019779/5501A285;
-Reference = R708;
-ValeurCmp = 0R;
-IdModule  = OHDSP-Footprints-Pretty:SMD-0805;
-EndCmp
-
-BeginCmp
 TimeStamp = /55019779/5501A28C;
 Reference = R709;
 ValeurCmp = 0R;
@@ -2678,14 +2650,14 @@ BeginCmp
 TimeStamp = /55019779/550197AA;
 Reference = U702;
 ValeurCmp = IC-DAC-WM8501;
-IdModule  = ;
+IdModule  = OHDSP-Footprints-Pretty:IC_SOIC_14;
 EndCmp
 
 BeginCmp
 TimeStamp = /55019779/55019783;
 Reference = U703;
 ValeurCmp = IC-ADC-WM8783;
-IdModule  = ;
+IdModule  = OHDSP-Footprints-Pretty:IC_SOIC_8;
 EndCmp
 
 BeginCmp
